Disable the blog, fix main nav contrast

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,17 +52,17 @@
         display: none;
     }
     .page-link {
-        color: $text-color;
+        color: $background-color;
         line-height: $base-line-height; // Gaps between nav items, but not on the last one
         &:not(:last-child) {
             margin-right: 20px;
         }
         &:hover {
-            color: $brand-color-dark;
+            color: $nav-active;
             text-decoration: none;
         }
         &.active {
-            color: $brand-color-dark;
+            color: $nav-active;
         }
     }
     @include media-query($on-palm) {
@@ -149,28 +149,28 @@
 
 .footer-col-1 {
     width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width : calc(35% - (#{$spacing-unit} / 2));
+    width: calc(35% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
     width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width : calc(20% - (#{$spacing-unit} / 2));
+    width: calc(20% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
     width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width : calc(45% - (#{$spacing-unit} / 2));
+    width: calc(45% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
     .footer-col-1,
     .footer-col-2 {
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width : calc(50% - (#{$spacing-unit} / 2));
+        width: calc(50% - (#{$spacing-unit} / 2));
     }
     .footer-col-3 {
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width : calc(100% - (#{$spacing-unit} / 2));
+        width: calc(100% - (#{$spacing-unit} / 2));
     }
 }
 
@@ -178,7 +178,7 @@
     .footer-col {
         float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width : calc(100% - (#{$spacing-unit} / 2));
+        width: calc(100% - (#{$spacing-unit} / 2));
     }
 }
 
