--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@ $brand-color-dark: darken($brand-color, 10%);
 $headline-color:   $text-color;
 $success-color:    #27ae60;
 $error-color:      #c0392b;
+$nav-active:       #79b094;
 
 $grey-color:       #727272;
 $grey-color-light: lighten($grey-color, 40%);
